--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "document-translator"
+name = "doculingo"
 version = "0.1.0"
 description = "Tool to translate big documents using LLMs."
 readme = "readme.md"
@@ -34,17 +34,17 @@ dev = [
 ]
 
 [project.scripts]
-document-translator = "document_translator.main:app"
+doculingo = "doculingo.main:app"
 
 [project.urls]
-homepage = "https://github.com/leynier/document-translator"
-documentation = "https://github.com/leynier/document-translator"
-repository = "https://github.com/leynier/document-translator"
-issues = "https://github.com/leynier/document-translator/issues"
+homepage = "https://github.com/leynier/doculingo"
+documentation = "https://github.com/leynier/doculingo"
+repository = "https://github.com/leynier/doculingo"
+issues = "https://github.com/leynier/doculingo/issues"
 
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [tool.hatch.build.targets.wheel]
-packages = ["document_translator"]
+packages = ["doculingo"]
